src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <label>ABN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSB_Number__c</fullName>
        <label>BSB Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Def_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Date__c</fullName>
        <label>First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Majik_AccountNo__c</fullName>
        <displayFormat>QVM-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Majik AccountNo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooks Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by SMS Magic</description>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trader_Status__c</fullName>
        <label>Trader Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <label>Trading Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>QuickBooks_Id__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Missing_QBO_Ids</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>QuickBooks_Id__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuickBooks_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Accounts Missing QBO Ids</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>SMS_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Trading_Name__c</columns>
        <columns>Majik_AccountNo__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>SMS_Opt_Out__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mobile_Phone__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SMS_Opt_Out__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SMS View</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <description>Supplier Accounts</description>
        <label>Supplier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trader</fullName>
        <active>true</active>
        <description>Trader Accounts</description>
        <label>Trader</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BSB_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  AND( LEN( BSB_Number__c )  &gt; 0, LEN( BSB_Number__c ) &lt;= 7 ), (OR(NOT(ISNUMBER(LEFT( BSB_Number__c , 3)) ),  NOT( ISNUMBER( RIGHT( BSB_Number__c , 3) ) ),  NOT( MID( BSB_Number__c , 4, 1)  =  &apos;-&apos; )    )))</errorConditionFormula>
        <errorDisplayField>BSB_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid BSB number [XXX-XXX where X is a number]</errorMessage>
    </validationRules>
</CustomObject>